data_model/tests/ui_fail/no_conversion.stderr
error[E0308]: mismatched types
 --> tests/ui_fail/no_conversion.rs:4:17
  |
4 |     Fixed::from(-1_f64);
  |                 ^^^^^^ expected struct `iroha_data_model::fixed::Fixed`, found `f64`
