data_model/tests/ui_fail/no_conversion.rs
use iroha_data_model::fixed::Fixed;

fn main() {
    Fixed::from(-1_f64);
}
